--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ body{
     font-size: 1.06rem;
     font-weight: 500;
     border-radius: 4px;
+    letter-spacing: 1.4px;
     border: 1px solid #aaa;
     padding: 0 2.85rem 0 1rem;
 }
@@ -76,10 +77,105 @@ body{
     content: "";
     height: 100%;
     width: 50%;
-    background:  #F8EF12;
     border-radius: inherit;
+    transition: width 0.3s ease;
 }
+
+.wrapper .pass-indicator#weak::before
+{
+    width: 20%;
+    background: #E64A4A;
+}
+
+.wrapper .pass-indicator#medium::before
+{
+    width: 50%;
+    background:  #F8EF12;
+}
+
+.wrapper .pass-indicator#strong::before
+{
+    width: 100%;
+    background: #4285F4;
+}
+
 
 .wrapper .pass-length{
     margin: 1.56rem 0 1.25rem;
+}
+
+.pass-length .details{
+    display: flex;
+    justify-content: space-between;
+}
+
+.pass-length input{
+    width: 100%;
+    height: 5px;
+}
+
+.pass-settings .options{
+    display: flex;
+    list-style: none;
+    flex-wrap: wrap;
+    margin-top: 1rem;
+}
+
+.pass-settings .options .option{
+    display: flex;
+    margin-bottom: 1rem;
+    width: calc(100% / 2);
+    align-items: center;
+}
+
+.options .option:first-child{
+    pointer-events: none;
+}
+.options .option:first-child input{
+    opacity: 0.7;
+}
+
+.options .option input{
+    height: 16px;
+    width: 16px;
+    cursor: pointer;
+}
+
+.options .option label{
+    cursor: pointer;
+    padding-left: 0.63rem;
+}
+
+.wrapper .generate-btn{
+    width: 100%;
+    background:  #3F3E41;
+    color: #fff;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-size: 1.06rem;
+    padding: 0.94rem 0;
+    border-radius: 5px;
+    margin: 0.94rem 0 1.3rem;
+    text-transform: uppercase;
+    transition: all 400ms ease;
+}
+
+.wrapper .generate-btn:hover{
+    background:  #757963;
+}
+
+@media screen and (max-width: 500px) {
+    .container{
+        margin: 1rem 1rem;
+    }
+
+    .options{
+        width: 100%;
+        gap: 1px;
+    }
+
+    .options .option{
+        width: calc(100% / 1) !important;
+    } 
 }
